fix(contact): update email address for developer contact information

--- a/privacy.html
+++ b/privacy.html
@@ -237,7 +237,7 @@ be reflected on this page.
 <h2>Contact</h2>
 <p>
 Developer: Mahesh Technicals<br>
-Email: msvarma10001@gmail.com<br>
+Email: help@maheshtechnicals.com<br>
 GitHub: https://github.com/MaheshTechnicals
 </p>
 </div>
